# york-genai-calc

./: LICENSE  MANIFEST.in  README.md  pyproject.toml
docs/estimate/: README.md
docs/ids/: README.md
docs/llm/: README.md
docs/mapping/: README.md
src/york_genai_calc/: calculate.py  cli.py  getters.py
src/york_genai_calc/__assets__/: models.csv  pricing.csv  providers.csv
src/york_genai_calc/config/: actions.py  constants.py  paths.py
src/york_genai_calc/mappings/: __init__.py  llms.py  pricing.py  providers.py
src/york_genai_calc/models/: llm.py  project.py  recurrence.py  responses.py  types.py  user_input.py  validators.py
src/york_genai_calc/parsing/: __init__.py
test/estimate/: test_01.json  test_02.json  test_03.json
